fixed bug, when UIID have sended with a value "null", and that's why there's not any opportunity to verify account. Added new endpoints in a "Liked" recourses Some code refactoring. Small fixes.